<resources>
    <string name="app_name">Deer SMS</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create An Account</string>
    <string name="sing_in_with_google">Sing In With Google</string>
    <string name="forget_your_password">Forget Your Password ?</string>
    <string name="todo">TODO</string>
    <string name="privacy_policy"><![CDATA[By clicking the sign up button , you agree to our ]]></string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policybutton">Privacy Policy</string>
    <string name="and">and</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="support">Support</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="fqr">FQR</string>
    <string name="whatsapp_support">WhatsApp Support</string>
    <string name="update">Update</string>
    <string name="please_enter_your_e_mail">please enter your e-mail</string>
    <string name="forget_password">Forget Password</string>
    <string name="reset_password">Reset Password</string>

    <string name="add_message">Add Message</string>
    <string name="choose_number">choose Number</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="type_your_message">Type Your Message</string>
    <string name="time">Time :</string>
    <string name="time2">Time</string>
    <string name="now">Now</string>
    <string name="custom">Custom</string>
    <string name="send_via">Send Via :</string>
    <string name="add_group">Add Group</string>
    <string name="choose_name_group">Enter Name Group</string>
    <string name="menu">menu</string>
    <string name="profile">Profile</string>
    <string name="groups">Groups</string>
    <string name="setting">Setting</string>
    <string name="rate_us">Rate Us</string>

    <string name="message_confirm_error">Password not matched</string>
    <string name="message_empty_error">Field can\'t be empty </string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="contacts">Contacts</string>
    <string name="templates">Templates</string>
    <string name="add_templates">Add A New Template Here</string>
    <string name="date">Date</string>
    <string name="logo_transition">logoanimation</string>
    <string name="sign_out">Sign Out</string>
    <string name="fqr1">How To Use App ?</string>
    <string name="fqr1_2">using by add message .</string>
    <string name="fqr2">Does the application breaches the privacy policy ?</string>
    <string name="fqr2_2">No .</string>
    <string name="fqr3">How to send message ?</string>
    <string name="fqr3_2">Go to Add Message Activity and insert number , message , choose send via by Whatsapp or SM .</string>
    <string name="fqr4">How to add group ?</string>
    <string name="fqr4_2">Go to add group , insert name group and select numbers .</string>
    <string name="name">Name</string>
    <string name="sorry_you_do_not_have_items">Sorry , You do not have messages</string>
    <string name="old_password">Old Password</string>
    <string name="sorry_you_do_not_have_groups">Sorry you do not have groups</string>
    <string name="choose_your_plan">Choose Your Plan</string>
    <string name="current_sim">Current SIM</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="no_plan">No Plan</string>
    <string name="confirm">Confirm</string>
    <string name="group">Group</string>
    <string name="sms">SMS</string>

    <string-array name="choose_activity">
        <item> WhatsApp Plan </item>
        <item> Current SIM Plan </item>
        <item> No Plan</item>
    </string-array>

    <string-array name="choose_activityGroup">
        <item> Current SIM Plan </item>
        <item> No Plan</item>
    </string-array>

</resources>
