<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_backgroundhome"
    tools:context=".view.activity.FQRActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="106dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/trashhandfont"
        android:text="@string/fqr"
        android:textColor="@color/textcolor"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="17dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="395dp" />

    <TextView
        android:id="@+id/txtfqr1_FQRActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fqr1"
        android:textColor="@color/textcolor"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toTopOf="@+id/guideline8" />

    <TextView
        android:id="@+id/txtfqr1_FQRActivity2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fqr1_2"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/txtfqr1_FQRActivity" />

    <TextView
        android:id="@+id/txtfqr2_FQRActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fqr2"
        android:textColor="@color/textcolor"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/txtfqr1_FQRActivity2" />

    <TextView
        android:id="@+id/txtfqr2_FQRActivity2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fqr2_2"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/txtfqr2_FQRActivity" />

    <TextView
        android:id="@+id/txtfqr3_FQRActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fqr3"
        android:textColor="@color/textcolor"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/txtfqr2_FQRActivity2" />

    <TextView
        android:id="@+id/txtfqr3_FQRActivity2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fqr3_2"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/txtfqr3_FQRActivity" />

    <TextView
        android:id="@+id/txtfqr4_FQRActivity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fqr4"
        android:textColor="@color/textcolor"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/txtfqr3_FQRActivity2" />

    <TextView
        android:id="@+id/txtfqr4_FQRActivity2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fqr4_2"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline9"
        app:layout_constraintTop_toBottomOf="@+id/txtfqr4_FQRActivity" />
</androidx.constraintlayout.widget.ConstraintLayout>