<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_backgroundhome"
    tools:context=".view.activity.SettingsActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/trashhandfont"
        android:text="@string/settings"
        android:textColor="@color/textcolor"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/language"
        android:fontFamily="@font/trashhandfont"
        android:textColor="@color/textcolor"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="106dp" />

    <Button
        android:id="@+id/btnArabic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/btn_start"
        android:text="@string/arabic"
        android:fontFamily="@font/trashhandfont"
        android:textSize="20sp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/ripple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btnEnglish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_start"
        android:text="@string/english"
        android:fontFamily="@font/trashhandfont"
        android:textSize="20sp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/ripple"
        app:layout_constraintEnd_toEndOf="@+id/btnArabic"
        app:layout_constraintStart_toStartOf="@+id/btnArabic"
        app:layout_constraintTop_toBottomOf="@+id/btnArabic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/support"
        android:fontFamily="@font/trashhandfont"
        android:textColor="@color/textcolor"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/btnEnglish" />

    <Button
        android:id="@+id/btnFQR"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_start"
        android:text="@string/fqr"
        android:fontFamily="@font/trashhandfont"
        android:textSize="20sp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/ripple"
        app:layout_constraintEnd_toEndOf="@+id/btnEnglish"
        app:layout_constraintStart_toStartOf="@+id/btnEnglish"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnWhatsappSupport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_start"
        android:text="@string/whatsapp_support"
        android:fontFamily="@font/trashhandfont"
        android:textSize="20sp"
        android:textColor="@color/textcolor"
        android:textColorLink="@color/ripple"
        app:layout_constraintEnd_toEndOf="@+id/btnFQR"
        app:layout_constraintStart_toStartOf="@+id/btnFQR"
        app:layout_constraintTop_toBottomOf="@+id/btnFQR" />
</androidx.constraintlayout.widget.ConstraintLayout>