<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_backgroundsingup"
    tools:context=".view.activity.SignUpActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        android:transitionName="@string/logo_transition"
        />

    <EditText
        android:id="@+id/edtEmail_SignUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/btn_start"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edtPassword_SignUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/btn_start"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail_SignUp"
        app:layout_constraintStart_toStartOf="@+id/edtEmail_SignUp"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail_SignUp"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/edtCofirmPassword_SignUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/btn_start"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSignUp_SignUp"
        app:layout_constraintStart_toStartOf="@+id/edtEmail_SignUp"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword_SignUp"
        tools:targetApi="o" />


    <Button
        android:id="@+id/btnSignUp_SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_startsolid"
        android:elevation="20dp"
        android:fontFamily="@font/trashhandfont"
        android:text="@string/sign_up"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/ripple"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword_SignUp"
        app:layout_constraintTop_toTopOf="@+id/edtCofirmPassword_SignUp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ConstraintLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp_SignUp"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/edtCofirmPassword_SignUp"
        app:layout_constraintTop_toBottomOf="@+id/edtCofirmPassword_SignUp">

        <TextView
            android:id="@+id/Policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/trashhandfont"
            android:text="@string/privacy_policy"
            android:textColor="@color/textcolor"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/Policy">

            <Button
                android:id="@+id/btn_Terms_And_Conditions"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/trashhandfont"
                android:text="@string/terms_conditions"
                android:textSize="13sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginEnd="3dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:fontFamily="@font/trashhandfont"
                android:text="@string/and"
                android:textColor="@color/textcolor"
                android:textSize="13sp" />

            <Button
                android:id="@+id/btn_Privacy_Policy"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/trashhandfont"
                android:text="@string/privacy_policybutton"
                android:textSize="13sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>