<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SignInActivity"
    android:background="@drawable/ic_backgroundsignin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        android:transitionName="@string/logo_transition"
        android:contentDescription="@string/todo" />


    <EditText
        android:id="@+id/edtEmail_SignIn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:autofillHints=""
        android:background="@drawable/btn_start"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/edtPassword_SignIn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints=""
        android:background="@drawable/btn_start"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/btnSignIn_SignIn"
        app:layout_constraintStart_toStartOf="@+id/edtEmail_SignIn"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail_SignIn"
        tools:targetApi="o" />

    <ProgressBar
        android:id="@+id/progressBar_SignIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/btnSignIn_SignIn"
        app:layout_constraintStart_toStartOf="@+id/edtPassword_SignIn"
        app:layout_constraintTop_toBottomOf="@+id/edtPassword_SignIn" />

    <Button
        android:id="@+id/btnSignIn_SignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_startsolid"
        android:elevation="20dp"
        android:fontFamily="@font/trashhandfont"
        android:onClick="onClick"
        android:text="@string/sign_in"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/ripple"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail_SignIn"
        app:layout_constraintTop_toTopOf="@+id/edtPassword_SignIn" />


    <Button
        android:id="@+id/btnGoogle_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_start"
        android:drawableStart="@drawable/ic_google_icon"
        android:drawablePadding="8dp"
        android:elevation="20dp"
        android:fontFamily="@font/trashhandfont"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/sing_in_with_google"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/ripple"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/btnSignIn_SignIn"
        app:layout_constraintStart_toStartOf="@+id/edtPassword_SignIn"
        app:layout_constraintTop_toBottomOf="@+id/progressBar_SignIn" />

    <Button
        android:id="@+id/btnForgetPassword_SignIn"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:elevation="20dp"
        android:fontFamily="@font/trashhandfont"
        android:text="@string/forget_your_password"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnGoogle_SignIn"
        app:layout_constraintStart_toStartOf="@+id/btnGoogle_SignIn"
        app:layout_constraintTop_toBottomOf="@+id/btnGoogle_SignIn" />

    <Button
        android:id="@+id/btnCreateAnAccount_SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:background="@drawable/btn_start_raduis"
        android:elevation="20dp"
        android:fontFamily="@font/trashhandfont"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:text="@string/create_an_account"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/ripple"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/btnGoogle_SignIn"
        app:layout_constraintStart_toStartOf="@+id/btnGoogle_SignIn"
        app:layout_constraintTop_toBottomOf="@+id/btnForgetPassword_SignIn" />

</androidx.constraintlayout.widget.ConstraintLayout>