<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.StartActivity"
    android:background="@drawable/ic_backgroundstart"
    android:transitionName="@string/logo_transition"
    >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_logo"
        android:transitionName="@string/logo_transition"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/btnSignIn_Start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_start"
        android:elevation="20dp"
        android:fontFamily="@font/trashhandfont"
        android:text="@string/sign_in"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/ripple"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSingUp_Start"
        app:layout_constraintEnd_toEndOf="@+id/btnSingUp_Start"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/btnSingUp_Start" />

    <Button
        android:id="@+id/btnSingUp_Start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/btn_startsolid"
        android:elevation="20dp"
        android:fontFamily="@font/trashhandfont"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:text="@string/create_an_account"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/ripple"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="30dp"
        android:background="@color/linestart"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn_Start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>