<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_backgroundsignin"
    tools:context=".view.activity.ForgetPasswordActivity">


    <Button
        android:id="@+id/btnForgetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_startsolid"
        android:elevation="20dp"
        android:fontFamily="@font/trashhandfont"
        android:text="@string/reset_password"
        android:textColor="@color/textcolor"
        android:textColorHint="@color/ripple"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail_ForgetPassword"
        app:layout_constraintStart_toStartOf="@+id/edtEmail_ForgetPassword"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail_ForgetPassword" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="119dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/trashhandfont"
        android:text="@string/forget_password"
        android:textColor="@color/textcolor"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail_ForgetPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:autofillHints=""
        android:hint="@string/email"
        android:textColorHint="@color/textcolor"
        android:textSize="20sp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/btn_start"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/textcolor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/trashhandfont"
        android:text="@string/please_enter_your_e_mail"
        android:textColor="@color/textcolor"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/edtEmail_ForgetPassword"
        app:layout_constraintStart_toStartOf="@+id/edtEmail_ForgetPassword"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />
</androidx.constraintlayout.widget.ConstraintLayout>